# vfs

./: .gitignore  CMakeLists.txt  Config.mk  Global.mk  Makefile  README.gdb  README.md  Vagrantfile  compile_commands.json  cs1670_reformat  cs1670_reformat_all  cscope.out  cscope.out.in  cscope.out.po  fsmaker  init.gdb  preinit.gdb  weenix  weenix-scripts.txt
.cache/clangd/index/: access.c.F35BCD354D65FD38.idx  access.h.8ED4227A3A94A6DE.idx  acpi.c.1F9ABADD9DB11829.idx  acpi.h.30482D321947F822.idx  anon.c.99D72E2D74F27EAE.idx  anon.h.B9BA6D54466AD092.idx  apic.c.FCB6C1FDFDC6D45D.idx  apic.h.5A3E6577CEBDDDEF.idx  atomic.h.5C7AC4AA19D61CEF.idx  binfmt.c.D389CD7CF431E3C8.idx  binfmt.h.E1C3B7107B1907F3.idx  blockdev.S.BD4D71ED68E1230C.idx  blockdev.h.573AD8C1A4BED215.idx  boot.S.449665392D765E61.idx  brk.c.52CD1F5B34983B1F.idx  brk.h.EDD32381C9ABDF62.idx  btree.c.B110D18AC912E7A1.idx  btree.h.31A60A2A70DE6489.idx  chardev.S.B17C025A4DCEA97D.idx  chardev.h.F1A50B6281FD6BF0.idx  cmos.S.2BDEE947F834ABF5.idx  cmos.h.BB9FCB1F478A9ED1.idx  command.c.E272CAE756EBE16A.idx  command.h.FB2E753C6C9FE0CE.idx  commands.c.5FDEDBF5FBD317D5.idx  commands.h.87D6D6D5F79A5CD9.idx  config.h.875D376EAA38AAE8.idx  config.h.9D900E41CCAD7126.idx  context.S.E7F7A2B2E0C92E4D.idx  context.h.426580C06609245E.idx  core.h.8A1D9570B929DBFF.idx  cpuid.h.C4233418566D9B71.idx  ctype.h.EC35BC00A90CEF13.idx  debug.c.BECE82DF05F666D1.idx  debug.h.24B722BF0688732D.idx  dev.h.EDE20227EF9BFBFB.idx  dirent.h.3D0E2325A8A91843.idx  driverstest.c.5B215CEFBCFA8029.idx  driverstest.h.56F29ADCC97C7664.idx  elf.c.BC6154CB4C65F0F4.idx  (+127 more)
kernel/: .gitignore  Makefile  link.ld  weenix.dbg
kernel/api/: access.c  binfmt.c  elf.c  exec.c  syscall.c
kernel/boot/: boot.S
kernel/drivers/: blockdev.S  chardev.S  cmos.S  keyboard.S  memdevs.S  pcie.S  screen.S
kernel/drivers/disk/: sata.S
kernel/drivers/tty/: ldisc.S  tty.S  vterminal.S
kernel/entry/: entry.c
kernel/fs/: file.c  namev.c  open.c  pipe.c  vfs.c  vfs_syscall.c  vnode.c  vnode_specials.c
kernel/fs/ramfs/: ramfs.c
kernel/fs/s5fs/: s5fs.c  s5fs_subr.c
kernel/include/: config.h  ctype.h  globals.h  kernel.h  limits.h  multiboot.h  types.h
kernel/include/api/: access.h  binfmt.h  elf.h  exec.h  utsname.h
kernel/include/boot/: config.h  multiboot_macros.h
kernel/include/drivers/: blockdev.h  chardev.h  cmos.h  dev.h  keyboard.h  pcie.h  screen.h
kernel/include/drivers/disk/: ahci.h  sata.h
kernel/include/drivers/tty/: ldisc.h  tty.h  vterminal.h
kernel/include/fs/: dirent.h  fcntl.h  file.h  open.h  stat.h  vfs.h  vfs_privtest.h  vfs_syscall.h  vnode.h
kernel/include/fs/ramfs/: ramfs.h
kernel/include/fs/s5fs/: s5fs.h  s5fs_subr.h
kernel/include/main/: acpi.h  apic.h  cpuid.h  gdt.h  inits.h  interrupt.h  io.h  smp.h
kernel/include/mm/: kmalloc.h  mman.h  mobj.h  page.h  pagetable.h  pframe.h  slab.h  tlb.h
kernel/include/proc/: context.h  core.h  kmutex.h  kthread.h  proc.h  sched.h  spinlock.h
kernel/include/test/: driverstest.h  proctest.h  s5fstest.h
kernel/include/test/kshell/: io.h  kshell.h
kernel/include/test/vfstest/: vfstest.h
kernel/include/util/: atomic.h  bits.h  btree.h  debug.h  delay.h  gdb.h  init.h  list.h  printf.h  string.h  time.h  timer.h
kernel/include/vm/: anon.h  brk.h  mmap.h  pagefault.h  shadow.h  vmmap.h
kernel/main/: acpi.c  apic.c  gdt.c  interrupt.c  kmain.c  smp.c  smp_trampoline.S
kernel/mm/: memcheck.py  mobj.c  page.c  page.py  pagetable.c  pagetable.gdb  pframe.c  slab.c  slab.py
kernel/proc/: context.S  fork.S  kmutex.S  kthread.S  proc.S  proc.py  sched.S  spinlock.S
kernel/test/: driverstest.c  pipes.c  proctest.c  s5fstest.c  usertest.c  vmtest.c
kernel/test/kshell/: command.c  command.h  commands.c  commands.h  io.c  kshell.c  priv.h  tokenizer.c  tokenizer.h
kernel/test/vfstest/: vfstest.c
kernel/util/: btree.c  debug.c  debug.py  init.c  list.c  list.py  math.c  printf.c  string.c  time.c  timer.c
kernel/vm/: anon.c  brk.c  mmap.c  pagefault.c  shadow.c  vmmap.c  vmmap.gdb
python/weenix/: __init__.py  kmem.py  proc.py  userland_new.py
tools/fsmaker/: api.py  sh.py
user/: Makefile  hamlet
user/include/: stddef.h  stdio.h  stdlib.h  string.h  unistd.h
user/include/pthread/: pthread.h
user/include/test/: test.h
user/include/weenix/: debug.h  syscall.h  trap.h
user/lib/ld-weenix/: asm.h  bs_x86_64.S  elf.h  ldalloc.c  ldnames.c  ldnames.h  ldreloc_x86_64.c  ldresolve.c  ldresolve.h  ldstart.c  ldtypes.h  ldutil.c  ldutil.h  smacros.h
user/lib/libc/: entry.S  malloc.c  printf.c  quad.c  rand.c  scanf.c  stream.c  string.c  strtol.c  syscall.c  vsnprintf.c  vsscanf.c
user/lib/libtest/: test.c
user/sbin/: halt.c  init.c
